--- a/src/Components/Weather/Weather.css
+++ b/src/Components/Weather/Weather.css
@@ -1,66 +1,143 @@
-* {
-  margin: 0px;
-  padding: 0px;
+*{
+    padding: 0px;
+    margin: 0px;
 }
 
-body {
-  font-family: "Varela Round", sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Roboto&family=Varela+Round&display=swap');
 
-  /* padding: 220px 0px 280px; */
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-}
-.main {
-  width: 30%;
-  background-image: url("../../Images/SmallBackground.jpg");
 
-  /* width: 100%; */
-
-  /* background-color: black; */
-  margin: 50px auto;
-  padding: 30px 10px;
-  text-align: center;
-  border-radius: 10px;
-  color: whitesmoke;
-}
-input {
-  width: 90%;
-  margin-top: 30px;
-  padding: 13px;
-  border-radius: 10px;
-  border: none;
-  outline: none;
-  font-size: 1em;
-}
-.info {
-  margin-top: 50px;
-}
-.info h2 {
-  margin-top: 30px;
-  color: white;
-  font-size: 2.5em;
-}
-.info h1 {
-  margin-top: 30px;
-  color: white;
-}
-.tempreature p {
-  margin-top: 30px;
+body{
+    background-color: lightblue;
+    font-family: 'Varela Round', sans-serif;
+    color: white;
 }
 
-.subdiv {
-  width: 70px;
-  height: 70px;
-  border-radius: 50%;
-  border: 1px solid;
-  margin: 30px 15px;
-  font-weight: 700;
+
+/* weatherContainer */
+
+.weatherContainer{
+    width: 23%;
+    border-radius: 15px;
+    background-color: white;
+    padding: 30px 10px ;
+    margin:  auto;
+    margin-top: 50px;
+    background-image: url("../../Images/bg-image.jpg");
+    min-height: 100%;   
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    box-shadow: 0px 0px 20px 2px black;
+
+    
 }
-.subdiv p {
-  position: relative;
-  top: 25px;
-  font-weight: 700;
+
+/* inputCotainer */
+
+
+.inputCotainer{
+    text-align: center;
 }
-.bold {
-  font-weight: 700;
+.inputField{
+    width: 87%;
+    padding: 12px;
+    outline: none;
+    border-radius: 25px;
+    border: none;
+    
 }
+.fa-search{
+    font-size: 1.4 em;
+    margin-left: 5px;
+    cursor: pointer;
+
+}
+
+/* tempContainer  */
+
+.tempContainer{
+    text-align: center;
+    margin-top: 30px;
+}
+
+.tempContainer h1{
+    font-size: 4em;
+    font-weight: initial;
+    letter-spacing: 3px;
+}
+
+.tempContainer h2{
+    margin-top: 15px;
+    letter-spacing: 6px;
+    font-size: 1.5em;
+    font-weight: initial;
+
+}
+
+/* DatenDayContainer */
+
+.DatenDayContainer{
+    margin-top: 15px;
+    text-align: center;
+    letter-spacing: 1px;
+    font-size: 0.9em;
+    font-weight: 500;
+
+}
+
+/* imageContainer */
+
+.imageContainer{
+    text-align: center;
+}
+
+
+/* Location */
+
+.Location p{
+    text-align: center;
+    font-size: 1.6em;
+    letter-spacing: 2px;
+    font-weight: 500
+}
+
+
+/* circle */
+
+.feelLikeContainer{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 20px;
+}
+
+.circle{
+    width: 55px;
+    height: 55px;
+    border-radius: 50%;
+    border: 2px solid white ;
+}
+
+.circleNumber{
+    position: relative;
+    top: 21px;
+    left: 14px;
+    font-size: 0.8em;
+    font-weight: 500;
+}
+.circleText{
+    text-align: center;
+    margin-top: 10px;
+    font-size: 0.9em;
+    font-weight: 500;
+    letter-spacing: 1px;
+}
+
+
+
+
+@media screen and (max-width: 768px) {
+    .weatherContainer{
+        width: 80%;
+        
+    }
+  }
